fix: username criteria copy and margin on password visibility btn

--- a/lucuberate-client/src/App.css
+++ b/lucuberate-client/src/App.css
@@ -826,7 +826,6 @@ input[name="password"] {
 }
 
 .password-visibilty-btn {
-  margin-right: 10px;
   background: none;
   opacity: 0.5;
   color: white;
@@ -850,7 +849,7 @@ input[name="password"] {
 }
 
 .caps-lock-warning {
-  display: block;
+  margin-left: 10px;
 }
 
 .caps-lock-hide {
@@ -2402,9 +2401,9 @@ input[type="radio"]:checked + label {
     font-size: 20px;
   }
 
-  .modal button:not(.close),
+  .modal button:not(.close, .password-visibilty-btn),
   .modal-guide button:not(.close),
-  .modal [type="button"]:not(.close),
+  .modal [type="button"]:not(.close, .password-visibilty-btn),
   .modal-guide [type="button"]:not(.close) {
     font-size: 12px;
     padding: 8px 12px;
@@ -2463,12 +2462,8 @@ input[type="radio"]:checked + label {
   }
 
   .input-icons-container {
-    margin-top: 27px;
+    margin-top: 35px;
     margin-right: 15px;
-  }
-
-  .password-visibilty-btn {
-    margin-right: 0;
   }
 
   .oauth-btn {
